added folders & files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
 # personal files & folders
 Omer/
-prDatabases/
+Aviv/
 
-prWebDev/
-Assignments-Final/
+prDatabases/
 
 prJava/
 EclipseProjects/
+
+prWebDev/
+Assignments-Final/
 
 # system & random shit to be ignored
 .vs/
 .vscode/
 .github/
 .idea/
+Web.config
